playlist working going on

--- a/spotify.html
+++ b/spotify.html
@@ -74,6 +74,9 @@
             <button>Login</button>
           </div>
         </div>
+        <div class="spotify-playlists">
+          <h1>Spotify Playlists</h1>
+        </div>
       </div>
     </div>
   </body>
