--- a/spotify.html
+++ b/spotify.html
@@ -1,83 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="spotify.css" />
-    <link rel="stylesheet" href="utility.css" />
-    <title>Document</title>
-  </head>
 
-  <body>
-    <div class="container flex bg-black">
-      <div class="left">
-        <div class="home bg-grey rounded m-1 p-1">
-          <div class="logo">
-            <img class="invert" src="logo.svg" alt="logo" />
-          </div>
-          <ul>
-            <li><img class="invert" src="home.svg" alt="home" />Home</li>
-            <li><img class="invert" src="search.svg" alt="search" />Search</li>
-          </ul>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="spotify.css" />
+  <link rel="stylesheet" href="utility.css" />
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="container flex bg-black">
+    <div class="left">
+      <div class="home bg-grey rounded m-1 p-1">
+        <div class="logo">
+          <img class="invert" src="logo.svg" alt="logo" />
         </div>
-        <div class="library bg-grey rounded m-1 p-1">
-          <div class="heading">
-            <img class="invert" src="library.svg" alt="" />
-            <h2>Your Library</h2>
-          </div>
-          <div class="footer">
-            <div>
-              <a href="https://www.spotify.com/in-en/legal/">
-                <span>Legal</span>
-              </a>
-            </div>
-            <div>
-              <a href="https://www.spotify.com/in-en/safetyandprivacy/">
-                <span>Safety &amp; Privacy Center</span>
-              </a>
-            </div>
-            <div>
-              <a href="https://www.spotify.com/in-en/legal/privacy-policy/">
-                <span>Privacy Policy</span>
-              </a>
-            </div>
-            <div>
-              <a href="https://www.spotify.com/in-en/legal/cookies-policy/">
-                <span>Cookies</span>
-              </a>
-            </div>
-            <div>
-              <a href="https://www.spotify.com/in-en/legal/privacy-policy/#s3">
-                <span>About Ads</span>
-              </a>
-            </div>
-            <div>
-              <a href="https://www.spotify.com/in-en/accessibility/">
-                <span>Accessibility</span>
-              </a>
-            </div>
-          </div>
-        </div>
+        <ul>
+          <li><img class="invert" src="home.svg" alt="home" />Home</li>
+          <li><img class="invert" src="search.svg" alt="search" />Search</li>
+        </ul>
       </div>
-      <div class="right bg-grey rounded">
-        <div class="header">
-          <div class="nav">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
-              <path d="M15 6C15 6 9.00001 10.4189 9 12C8.99999 13.5812 15 18 15 18" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-          </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
-            <path d="M9.00005 6C9.00005 6 15 10.4189 15 12C15 13.5812 9 18 9 18" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-        </svg>
-           </div>
-          <div class="buttons">
-            <button>SignUp</button>
-            <button>Login</button>
-          </div>
+      <div class="library bg-grey rounded m-1 p-1">
+        <div class="heading">
+          <img class="invert" src="library.svg" alt="" />
+          <h2>Your Library</h2>
         </div>
-        <div class="spotify-playlists">
-          <h1>Spotify Playlists</h1>
+        <div class="footer">
+          <div>
+            <a href="https://www.spotify.com/in-en/legal/">
+              <span>Legal</span>
+            </a>
+          </div>
+          <div>
+            <a href="https://www.spotify.com/in-en/safetyandprivacy/">
+              <span>Safety &amp; Privacy Center</span>
+            </a>
+          </div>
+          <div>
+            <a href="https://www.spotify.com/in-en/legal/privacy-policy/">
+              <span>Privacy Policy</span>
+            </a>
+          </div>
+          <div>
+            <a href="https://www.spotify.com/in-en/legal/cookies-policy/">
+              <span>Cookies</span>
+            </a>
+          </div>
+          <div>
+            <a href="https://www.spotify.com/in-en/legal/privacy-policy/#s3">
+              <span>About Ads</span>
+            </a>
+          </div>
+          <div>
+            <a href="https://www.spotify.com/in-en/accessibility/">
+              <span>Accessibility</span>
+            </a>
+          </div>
         </div>
       </div>
     </div>
-  </body>
+    <div class="right bg-grey rounded">
+      <div class="header">
+        <div class="nav">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000"
+            fill="none">
+            <path d="M15 6C15 6 9.00001 10.4189 9 12C8.99999 13.5812 15 18 15 18" stroke="#ffffff" stroke-width="1.5"
+              stroke-linecap="round" stroke-linejoin="round" />
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000"
+            fill="none">
+            <path d="M9.00005 6C9.00005 6 15 10.4189 15 12C15 13.5812 9 18 9 18" stroke="#ffffff" stroke-width="1.5"
+              stroke-linecap="round" stroke-linejoin="round" />
+          </svg>
+        </div>
+        <div class="buttons">
+          <button>SignUp</button>
+          <button>Login</button>
+        </div>
+      </div>
+      <div class="spotifyPlaylists">
+        <h1>Spotify Playlists</h1>
+        <div class="cardContainer">
+          <div class="card">
+            <div class="play"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="44" height="44"
+                color="black" fill="#00ff00">
+                <circle cx="12" cy="12" r="10" stroke="none" />
+                <path
+                  d="M9.5 11.1998V12.8002C9.5 14.3195 9.5 15.0791 9.95576 15.3862C10.4115 15.6932 11.0348 15.3535 12.2815 14.6741L13.7497 13.8738C15.2499 13.0562 16 12.6474 16 12C16 11.3526 15.2499 10.9438 13.7497 10.1262L12.2815 9.32594C11.0348 8.6465 10.4115 8.30678 9.95576 8.61382C9.5 8.92086 9.5 9.6805 9.5 11.1998Z"
+                  fill="currentColor" />
+              </svg>
+            </div>
+            <img src="https://i.scdn.co/image/ab67706f0000000255be59b7be2929112e7ac927" alt="">
+            <h2>lofi beats</h2>
+            <p>chill beats, lofi vibes, new tracks every week...</p>
+          </div>
+          <div class="card">
+            <div class="play"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="44" height="44"
+              color="black" fill="#00ff00">
+              <circle cx="12" cy="12" r="10" stroke="none" />
+              <path
+                d="M9.5 11.1998V12.8002C9.5 14.3195 9.5 15.0791 9.95576 15.3862C10.4115 15.6932 11.0348 15.3535 12.2815 14.6741L13.7497 13.8738C15.2499 13.0562 16 12.6474 16 12C16 11.3526 15.2499 10.9438 13.7497 10.1262L12.2815 9.32594C11.0348 8.6465 10.4115 8.30678 9.95576 8.61382C9.5 8.92086 9.5 9.6805 9.5 11.1998Z"
+                fill="currentColor" />
+            </svg>
+          </div>
+            <img src="https://i.scdn.co/image/ab67706f000000028695a5a2512e4c614fdbfc39" alt="">
+            <h2>Today's Top Hits</h2>
+            <p>Shaboozey is on top of the Hottest 50!</p>
+          </div>
+          <div class="card">
+            <div class="play"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="44" height="44"
+              color="black" fill="#00ff00">
+              <circle cx="12" cy="12" r="10" stroke="none" />
+              <path
+                d="M9.5 11.1998V12.8002C9.5 14.3195 9.5 15.0791 9.95576 15.3862C10.4115 15.6932 11.0348 15.3535 12.2815 14.6741L13.7497 13.8738C15.2499 13.0562 16 12.6474 16 12C16 11.3526 15.2499 10.9438 13.7497 10.1262L12.2815 9.32594C11.0348 8.6465 10.4115 8.30678 9.95576 8.61382C9.5 8.92086 9.5 9.6805 9.5 11.1998Z"
+                fill="currentColor" />
+            </svg>
+          </div>
+            <img src="https://i.scdn.co/image/ab67706f00000002dec17246891b5b4eb97bdb0d" alt="">
+            <h2>Chillout Lounge</h2>
+            <p>Just lean back and enjoy relaxed beats.</p>
+          </div>
+          <div class="card">
+            <div class="play"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="44" height="44"
+              color="black" fill="#00ff00">
+              <circle cx="12" cy="12" r="10" stroke="none" />
+              <path
+                d="M9.5 11.1998V12.8002C9.5 14.3195 9.5 15.0791 9.95576 15.3862C10.4115 15.6932 11.0348 15.3535 12.2815 14.6741L13.7497 13.8738C15.2499 13.0562 16 12.6474 16 12C16 11.3526 15.2499 10.9438 13.7497 10.1262L12.2815 9.32594C11.0348 8.6465 10.4115 8.30678 9.95576 8.61382C9.5 8.92086 9.5 9.6805 9.5 11.1998Z"
+                fill="currentColor" />
+            </svg>
+          </div>
+            <img src="https://i.scdn.co/image/ab67706f00000002b43eac9f01f8b865662b5c29" alt="">
+            <h2>All Out 2020s</h2>
+            <p>The biggest songs of the 2020s. Cover: Doja Cat.</p>
+          </div>
+          <div class="card">
+            <div class="play"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="44" height="44"
+              color="black" fill="#00ff00">
+              <circle cx="12" cy="12" r="10" stroke="none" />
+              <path
+                d="M9.5 11.1998V12.8002C9.5 14.3195 9.5 15.0791 9.95576 15.3862C10.4115 15.6932 11.0348 15.3535 12.2815 14.6741L13.7497 13.8738C15.2499 13.0562 16 12.6474 16 12C16 11.3526 15.2499 10.9438 13.7497 10.1262L12.2815 9.32594C11.0348 8.6465 10.4115 8.30678 9.95576 8.61382C9.5 8.92086 9.5 9.6805 9.5 11.1998Z"
+                fill="currentColor" />
+            </svg>
+          </div>
+            <img src="https://i.scdn.co/image/ab67706f00000002472120b92edea982b5feb264" alt="">
+            <h2>Jazz in the Background</h2>
+            <p>Soft instrumental Jazz for all your activities.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
