login and signup button modified

--- a/spotify.html
+++ b/spotify.html
@@ -75,8 +75,8 @@
           </svg>
         </div>
         <div class="buttons">
-          <button>SignUp</button>
-          <button>Login</button>
+          <button class="signupbtn">Sign up</button>
+          <button class="loginbtn">Login</button>
         </div>
       </div>
       <div class="spotifyPlaylists">
@@ -147,10 +147,12 @@
             <h2>Jazz in the Background</h2>
             <p>Soft instrumental Jazz for all your activities.</p>
           </div>
+          
+        </div>
         </div>
       </div>
-    </div>
   </div>
+  <script src="spotify.js"></script>
 </body>
 
 </html>
