--- a/spotify.html
+++ b/spotify.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="spotify.css" />
   <link rel="stylesheet" href="utility.css" />
-  <title>Document</title>
+  <title>Spotify - Web Player: Music for everyone</title>
 </head>
 
 <body>
@@ -76,7 +76,7 @@
         </div>
         <div class="buttons">
           <button class="signupbtn">Sign up</button>
-          <button class="loginbtn">Login</button>
+          <button class="loginbtn">Log in</button>
         </div>
       </div>
       <div class="spotifyPlaylists">
@@ -149,10 +149,18 @@
           </div>
           
         </div>
+        <div class="playbar">
+          <div class="songinfo"></div>
+          <div class="songbuttons">
+            <img src="prev.svg" alt="">
+            <img src="play.svg" alt="">
+            <img src="next.svg" alt="">
+          </div>
+          <div class="songtime"></div>
+        </div>
         </div>
       </div>
   </div>
   <script src="spotify.js"></script>
 </body>
-
 </html>
