--- a/spotify.html
+++ b/spotify.html
@@ -28,7 +28,18 @@
         </div>
         <div class="songList">
           <ul>
-
+            <li>
+              <img class="invert" src="music.svg" alt="">
+              <div class="info">
+                <div>Song Name</div>
+                <div>Song Artist</div>
+              </div>
+              <div class="playnow">
+                <span>Play Now</span>
+                <img src="play.svg" alt="">
+              </div>
+              
+            </li>
           </ul>
         </div> 
         <div class="footer">
