songs in your playlist are able to play now also seekbar is added

--- a/spotify.html
+++ b/spotify.html
@@ -28,18 +28,6 @@
         </div>
         <div class="songList">
           <ul>
-            <li>
-              <img class="invert" src="music.svg" alt="">
-              <div class="info">
-                <div>Song Name</div>
-                <div>Song Artist</div>
-              </div>
-              <div class="playnow">
-                <span>Play Now</span>
-                <img src="play.svg" alt="">
-              </div>
-              
-            </li>
           </ul>
         </div> 
         <div class="footer">
@@ -166,11 +154,14 @@
           
         </div>
         <div class="playbar">
+          <div class="seekbar">
+            <div class="circle"></div>
+          </div>
           <div class="songinfo"></div>
           <div class="songbuttons">
-            <img src="prev.svg" alt="">
-            <img src="play.svg" alt="">
-            <img src="next.svg" alt="">
+            <img id="previous" src="prev.svg" alt="">
+            <img id="play" src="play.svg" alt="">
+            <img id="next" src="next.svg" alt="">
           </div>
           <div class="songtime"></div>
         </div>
