seekbar and playbutton are clearly functionable now

--- a/spotify.html
+++ b/spotify.html
@@ -14,7 +14,7 @@
     <div class="left">
       <div class="home bg-grey rounded m-1 p-1">
         <div class="logo">
-          <img class="invert" src="logo.svg" alt="logo" />
+          <img width="90px" class="invert" src="logo.svg" alt="logo" />
         </div>
         <ul>
           <li><img class="invert" src="home.svg" alt="home" />Home</li>
@@ -157,13 +157,16 @@
           <div class="seekbar">
             <div class="circle"></div>
           </div>
-          <div class="songinfo"></div>
-          <div class="songbuttons">
-            <img id="previous" src="prev.svg" alt="">
-            <img id="play" src="play.svg" alt="">
-            <img id="next" src="next.svg" alt="">
+          <div class="abovebar">
+            <div class="songinfo"></div>
+            <div class="songbuttons">
+              <img id="previous" src="prev.svg" alt="">
+              <img id="play" src="play.svg" alt="">
+              <img id="next" src="next.svg" alt="">
+            </div>
+            <div class="songtime"></div>
           </div>
-          <div class="songtime"></div>
+         
         </div>
         </div>
       </div>
