--- a/spotify.html
+++ b/spotify.html
@@ -12,6 +12,7 @@
 <body>
   <div class="container flex bg-black">
     <div class="left">
+      <div class="close"><img class="invert" src="close.svg" alt=""></div>
       <div class="home bg-grey rounded m-1 p-1">
         <div class="logo">
           <img width="90px" class="invert" src="logo.svg" alt="logo" />
@@ -67,6 +68,8 @@
     <div class="right bg-grey rounded">
       <div class="header">
         <div class="nav">
+          <div class="hamburgerComtainer"> <img class="hamburger invert" src="hamburger.svg" alt="">
+           
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000"
             fill="none">
             <path d="M15 6C15 6 9.00001 10.4189 9 12C8.99999 13.5812 15 18 15 18" stroke="#ffffff" stroke-width="1.5"
@@ -77,6 +80,7 @@
             <path d="M9.00005 6C9.00005 6 15 10.4189 15 12C15 13.5812 9 18 9 18" stroke="#ffffff" stroke-width="1.5"
               stroke-linecap="round" stroke-linejoin="round" />
           </svg>
+        </div>
         </div>
         <div class="buttons">
           <button class="signupbtn">Sign up</button>
