volume bar is added also website responsivness is modified

--- a/spotify.html
+++ b/spotify.html
@@ -168,7 +168,15 @@
               <img id="play" src="play.svg" alt="">
               <img id="next" src="next.svg" alt="">
             </div>
+            <div class="timeVol">
             <div class="songtime"></div>
+            <div class="volume">
+              <img id="volume" class="invert" src="volume.svg" alt="">
+              <div class="range">
+                <input type="range" name="volume">
+              </div>
+            </div>
+          </div>
           </div>
          
         </div>
